--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
-{
+{ 
+  
+  "homepage": "http://Aleksey-Shtr1h.github.io/web-chat",
   "name": "web-chat",
   "version": "0.1.0",
   "private": true,
@@ -18,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
