--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
+    "react-slick": "0.27.11",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "resolve-url-loader": "3.1.1"
   }
 }
