--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://Aleksey-Shtr1h.github.io/web-chat",
   "name": "web-chat",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +14,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
     "react-slick": "0.27.11",
+    "react-spinners": "^0.9.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "1.8.1"
@@ -23,9 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,6 +43,7 @@
   "devDependencies": {
     "gh-pages": "^3.1.0",
     "nanoid": "3.1.20",
+    "redux-devtools-extension": "2.13.8",
     "resolve-url-loader": "3.1.1"
   }
 }
