--- a/package.json
+++ b/package.json
@@ -43,9 +43,17 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "gh-pages": "^3.1.0",
     "nanoid": "3.1.20",
+    "prettier": "^2.2.1",
     "redux-devtools-extension": "2.13.8",
-    "resolve-url-loader": "3.1.1"
+    "resolve-url-loader": "3.1.1",
+    "typescript": "^4.2.4"
   }
 }
